# arc_agi_pretraining_recipe

./: .gitignore  DEVELOPMENT_MANIFESTO.md  README.md  directional_fqi_log_3d.tex  requirements-atari-pixel.txt  requirements-atari.txt  requirements-models.txt  requirements.txt
arc_trajectory_sampler/: README.md  __init__.py  analyze_gsm8k_template_fit.py  benchmark_arc_reasoning_tokenizers.py  benchmark_arc_tokenizers.py  core_graph_extractor.py  core_loader.py  core_reasoning_adapter.py  dclm_corpus.py  evaluate_arc_agi2_representation.py  evaluate_gsm8k_parser.py  evaluate_mmlu_parser.py  evaluate_olympiad_math_parser.py  evaluate_pretraining_quality.py  evaluate_sampler.py  evaluate_word_problem_translation_quality.py  mixed_reasoning_dataset.py  mmlu_parser.py  mmlu_variants.py  olympiad_math_parser.py  oscar_graph_reasoning.py  oscar_scope_corpus.py  oscar_scope_reasoning.py  recommend_gsm8k_arc_families.py  report_evaluation.py  stage2_episode_sampler.py  stage4_trajectory_dataset.py  stage4_trajectory_renderer.py  state_adapter.py  trajectory_renderer.py  trm_dataset_export.py
docs/: current_system_spec.md  full_scale_reasoning_architecture_review.md  overnight_8h100_epiplex_recipe.md  spec_alignment.md  (+1 more)
portable_reasoning_bundle/: README.md  pyproject.toml
portable_reasoning_bundle/arc_trajectory_sampler/: __init__.py  generate_pretraining_trajectories.py  gsm8k_reasoning_parser.py  mixed_reasoning_dataset.py  mmlu_parser.py  reasoning_ir.py  stage1_latent_sampler.py  stage3_grid_executor.py  state_adapter.py  word_problem_translation_dataset.py
(+79 files in other folders)
